# async_telegram_notifier

./: .gitignore  Cargo.toml  README.md  configuration_example.yml  configuration_template.yml
src/: configuration.rs  configuration_tests.rs  developer.rs  main.rs  notification_reminder.rs  notification_service.rs  pull_request.rs  repository.rs
