[package]
name = "async_telegram_notifier"
version = "0.1.0"
authors = ["HagasSaan <artemian000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
reqwest = { version = "0.10", features = ["json", "socks"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
serde = "1.0.110"
serde_json = "1.0.53"
base64 = "0.12.1"