[package]
name = "async_telegram_notifier"
version = "0.1.0"
authors = ["HagasSaan <artemian000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
reqwest = { version = "0.10", features = ["json", "socks"] }
tokio = { version = "0.2" }
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8"
base64 = "0.12.1"
chrono = { version = "0.4", features = ["serde"] }
simple_logger = "1.6.0"
log = "0.4.6"
clap = "2.33"
